--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "postcss-preset-env": "^10.1.5",
     "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.14",
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.8.3",
     "webpack": "^5.99.5",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
